Added DeleteOperationTest