@@ -1,17 +1,23 @@
 package io.stargate.sgv2.jsonapi.service.operation.model.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
+import com.datastax.oss.driver.api.core.cql.AsyncResultSet;
+import com.datastax.oss.driver.api.core.cql.ColumnDefinitions;
+import com.datastax.oss.driver.api.core.cql.Row;
+import com.datastax.oss.driver.api.core.cql.SimpleStatement;
+import com.datastax.oss.driver.api.core.data.TupleValue;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.test.junit.QuarkusTest;
 import io.quarkus.test.junit.TestProfile;
+import io.smallrye.mutiny.Uni;
 import io.smallrye.mutiny.helpers.test.UniAssertSubscriber;
-import io.stargate.bridge.grpc.TypeSpecs;
-import io.stargate.bridge.grpc.Values;
-import io.stargate.bridge.proto.QueryOuterClass;
 import io.stargate.sgv2.api.common.config.QueriesConfig;
-import io.stargate.sgv2.common.bridge.AbstractValidatingStargateBridgeTest;
-import io.stargate.sgv2.common.bridge.ValidatingStargateBridge;
 import io.stargate.sgv2.common.testprofiles.NoGlobalResourcesTestProfile;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandContext;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandResult;
@@ -19,25 +25,26 @@ import io.stargate.sgv2.jsonapi.api.model.command.CommandStatus;
 import io.stargate.sgv2.jsonapi.api.model.command.clause.filter.ComparisonExpression;
 import io.stargate.sgv2.jsonapi.api.model.command.clause.filter.LogicalExpression;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.QueryExecutor;
-import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CustomValueSerializers;
+import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CQLBindValues;
 import io.stargate.sgv2.jsonapi.service.operation.model.ReadType;
 import io.stargate.sgv2.jsonapi.service.projection.DocumentProjector;
-import io.stargate.sgv2.jsonapi.service.shredding.model.DocValueHasher;
 import io.stargate.sgv2.jsonapi.service.shredding.model.DocumentId;
+import io.stargate.sgv2.jsonapi.service.testutil.MockAsyncResultSet;
+import io.stargate.sgv2.jsonapi.service.testutil.MockRow;
 import jakarta.inject.Inject;
-import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
 import org.apache.commons.lang3.RandomStringUtils;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 @QuarkusTest
-@Disabled
 @TestProfile(NoGlobalResourcesTestProfile.Impl.class)
-public class DeleteOperationTest extends AbstractValidatingStargateBridgeTest {
+public class DeleteOperationTest extends OperationTestBase {
   private static final String KEYSPACE_NAME = RandomStringUtils.randomAlphanumeric(16);
   private static final String COLLECTION_NAME = RandomStringUtils.randomAlphanumeric(16);
   private static final CommandContext COMMAND_CONTEXT =
@@ -50,6 +57,12 @@ public class DeleteOperationTest extends AbstractValidatingStargateBridgeTest {
   @Nested
   class Execute {
 
+    private final ColumnDefinitions DELETE_RESULT_COLUMNS =
+        buildColumnDefs(Arrays.asList(TestColumn.ofBoolean("[applied]")));
+
+    private final ColumnDefinitions SELECT_RESULT_COLUMNS =
+        buildColumnDefs(Arrays.asList(TestColumn.ofKey("key"), TestColumn.ofUuid("tx_id")));
+
     @Test
     public void deleteWithId() {
       UUID tx_id = UUID.randomUUID();
@@ -57,41 +70,44 @@ public class DeleteOperationTest extends AbstractValidatingStargateBridgeTest {
       String collectionReadCql =
           "SELECT key, tx_id FROM \"%s\".\"%s\" WHERE key = ? LIMIT 1"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert readAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(1)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id))));
+      final TupleValue keyValue = CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc1"));
+
+      SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, keyValue);
+
+      List<Row> rows =
+          Arrays.asList(
+              new MockRow(
+                  SELECT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(byteBufferFrom(keyValue), byteBufferFrom(tx_id))));
+
+      AsyncResultSet mockResults = new MockAsyncResultSet(SELECT_RESULT_COLUMNS, rows, null);
+      final AtomicInteger selectCallCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+      when(queryExecutor.executeRead(eq(stmt), any(), anyInt()))
+          .then(
+              invocation -> {
+                selectCallCount.incrementAndGet();
+                return Uni.createFrom().item(mockResults);
+              });
 
       String collectionDeleteCql =
           "DELETE FROM \"%s\".\"%s\" WHERE key = ? IF tx_id = ?"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert deleteAssert =
-          withQuery(
-                  collectionDeleteCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))),
-                  Values.of(tx_id))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement deleteStmt =
+          SimpleStatement.newInstance(collectionDeleteCql, keyValue, tx_id);
+      List<Row> deleteRows =
+          Arrays.asList(new MockRow(DELETE_RESULT_COLUMNS, 0, Arrays.asList(byteBufferFrom(true))));
+
+      AsyncResultSet deleteResults =
+          new MockAsyncResultSet(DELETE_RESULT_COLUMNS, deleteRows, null);
+      final AtomicInteger deleteCallCount = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(deleteStmt)))
+          .then(
+              invocation -> {
+                deleteCallCount.incrementAndGet();
+                return Uni.createFrom().item(deleteResults);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -119,14 +135,91 @@ public class DeleteOperationTest extends AbstractValidatingStargateBridgeTest {
               .getItem();
 
       // assert query execution
-      readAssert.assertExecuteCount().isOne();
-      deleteAssert.assertExecuteCount().isOne();
+      assertThat(selectCallCount.get()).isEqualTo(1);
+      assertThat(deleteCallCount.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
       assertThat(result.status()).hasSize(1).containsEntry(CommandStatus.DELETED_COUNT, 1);
     }
 
+    @Test
+    public void deleteWithSizeFilter() {
+      UUID tx_id = UUID.randomUUID();
+
+      String collectionReadCql =
+          "SELECT key, tx_id FROM \"%s\".\"%s\" WHERE array_size[?] = ? LIMIT 1"
+              .formatted(KEYSPACE_NAME, COLLECTION_NAME);
+      SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, "tags", 2);
+      final TupleValue keyValue = CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc1"));
+
+      List<Row> rows =
+          Arrays.asList(
+              new MockRow(
+                  SELECT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(byteBufferFrom(keyValue), byteBufferFrom(tx_id))));
+
+      AsyncResultSet mockResults = new MockAsyncResultSet(SELECT_RESULT_COLUMNS, rows, null);
+      final AtomicInteger selectCallCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+      when(queryExecutor.executeRead(eq(stmt), any(), anyInt()))
+          .then(
+              invocation -> {
+                selectCallCount.incrementAndGet();
+                return Uni.createFrom().item(mockResults);
+              });
+
+      String collectionDeleteCql =
+          "DELETE FROM \"%s\".\"%s\" WHERE key = ? IF tx_id = ?"
+              .formatted(KEYSPACE_NAME, COLLECTION_NAME);
+      SimpleStatement deleteStmt =
+          SimpleStatement.newInstance(collectionDeleteCql, keyValue, tx_id);
+      List<Row> deleteRows =
+          Arrays.asList(new MockRow(DELETE_RESULT_COLUMNS, 0, Arrays.asList(byteBufferFrom(true))));
+
+      AsyncResultSet deleteResults =
+          new MockAsyncResultSet(DELETE_RESULT_COLUMNS, deleteRows, null);
+      final AtomicInteger deleteCallCount = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(deleteStmt)))
+          .then(
+              invocation -> {
+                deleteCallCount.incrementAndGet();
+                return Uni.createFrom().item(deleteResults);
+              });
+
+      LogicalExpression implicitAnd = LogicalExpression.and();
+      List<DBFilterBase> filters = List.of(new DBFilterBase.SizeFilter("tags", 2));
+      implicitAnd.comparisonExpressions.add(
+          new ComparisonExpression("tags", new ArrayList<>(), filters));
+
+      FindOperation findOperation =
+          FindOperation.unsortedSingle(
+              COMMAND_CONTEXT,
+              implicitAnd,
+              DocumentProjector.identityProjector(),
+              ReadType.KEY,
+              objectMapper);
+
+      DeleteOperation operation = DeleteOperation.delete(COMMAND_CONTEXT, findOperation, 1, 3);
+
+      final UniAssertSubscriber<Supplier<CommandResult>> supplierUniAssertSubscriber =
+          operation
+              .execute(queryExecutor)
+              .subscribe()
+              .withSubscriber(UniAssertSubscriber.create())
+              .awaitFailure();
+
+      supplierUniAssertSubscriber.getFailure().printStackTrace();
+      // assert query execution
+      assertThat(selectCallCount.get()).isEqualTo(1);
+      assertThat(deleteCallCount.get()).isEqualTo(1);
+
+      // then result
+      // CommandResult result = execute.get();
+      // assertThat(result.status()).hasSize(1).containsEntry(CommandStatus.DELETED_COUNT, 1);
+    }
+    /*
     @Test
     public void deleteOneAndReturnById() {
       UUID tx_id = UUID.randomUUID();
@@ -1598,6 +1691,6 @@ public class DeleteOperationTest extends AbstractValidatingStargateBridgeTest {
                     .isEqualTo(
                         "Failed to delete documents with _id ['doc1', 'doc2']: Unable to complete transaction due to concurrent transactions");
               });
-    }
+    }*/
   }
 }
